--- a/TDDD23-MonogameProject.csproj
+++ b/TDDD23-MonogameProject.csproj
@@ -29,13 +29,14 @@
   </ItemGroup>
 
   <ItemGroup> 
-  <Content Include="Data\**"> 
-    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
-  </Content> 
-  <Content Include="Cache\**"> 
-    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
-  </Content> 
+    <Content Include="Data\**"> 
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
+    </Content> 
   </ItemGroup>
+
+  <Target Name="MakeMyDir" AfterTargets="Build">
+    <MakeDir Directories="$(OutDir)Cache" />
+  </Target>
 
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
