Removed debbuging files creation during runtime.

--- a/TDDD23-MonogameProject.csproj
+++ b/TDDD23-MonogameProject.csproj
@@ -34,6 +34,12 @@
     </Content> 
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Save\HighscoreNight.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
   <Target Name="MakeMyDir" AfterTargets="Build">
     <MakeDir Directories="$(OutDir)Cache" />
   </Target>
