--- a/TDDD23-MonogameProject.csproj
+++ b/TDDD23-MonogameProject.csproj
@@ -34,6 +34,12 @@
     </Content> 
   </ItemGroup>
 
+  <ItemGroup> 
+    <Content Include="Data\"> 
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
+    </Content> 
+  </ItemGroup>
+
   <ItemGroup>
     <None Update="Save\HighscoreNight.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
