--- a/TDDD23-MonogameProject.csproj
+++ b/TDDD23-MonogameProject.csproj
@@ -35,7 +35,7 @@
   </ItemGroup>
 
   <ItemGroup> 
-    <Content Include="Data\"> 
+    <Content Include="Data\*"> 
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
     </Content> 
   </ItemGroup>
